# Sequence_Alignment

./: .gitignore  CMakeLists.txt  README.md  tempCodeRunnerFile.cpp
LaTeX/: 24300240045俞舜云Lab1.aux  24300240045俞舜云Lab1.out  24300240045俞舜云Lab1.tex
lab1/: CMakeLists.txt  Lab1.md  Sequence Alignment with Tandem Duplication.md  Solution  Solution.cpp  query.in  reference.in  repeat.md  stringProcess.md
lab1/doc/: repeat.md
lab1/sequence/: query.in  reference.in
lab1/src/: Answer.out  Solution  Solution.cpp  drawer.py  lab1.cpp  lab1main.cpp  reference.in  repeat.cpp  repeat.h  stringProcess.cpp  stringProcess.h
lab1/src/HeadFile/: repeat.cpp  repeat.h
lab2/: CMakeLists.txt  command  lab2.md  sequence.cpp  sequence_lab2  test
lab2/doc/: 算法课实验.ipynb
lab2/judge/: judge.py
lab2/result/: result1.out  result2.out
lab2/sequence/: query2.in
lab2/src/: fileProcess.cpp  fileProcess.h  lab2main.cpp  sequenceProcess.cpp  sequenceProcess.h  sequence_lab2
